# neoplot-juce

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE-JUCE  README.md
example/: CMakeLists.txt
example/src/: CommonHeader.h  MainComponent.cpp  MainComponent.h  MainWindow.cpp  MainWindow.h
neoplot/: CMakeLists.txt
neoplot/src/libInterpolate/: AnyInterpolator.hpp  Interpolate.hpp
neoplot/src/libInterpolate/Interpolators/_1D/: AnyInterpolator.hpp  InterpolatorBase.hpp
neoplot/src/libInterpolate/Interpolators/_2D/: AnyInterpolator.hpp  DelaunayTriangulationInterpolatorBase.hpp  InterpolatorBase.hpp
neoplot/src/neoplot/: AxisLabel.h  NeoPlot.h  PlotData.h  PlotGrid.h  PlotLegend.h  PlotLines.h  PlotMouseInteraction.h  PlotMouseLabel.h  PlotOverlay.h  PlotSettings.h  PlotStyle.h  PlotTools.h  PlotType.h  spline.h
